QuickBooks Integration/objects/Invoices__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>IF( Payments__c &lt; 0, Total_Invoice_Amount__c + Payments__c, Total_Invoice_Amount__c - Payments__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <description>Days Since Invoiced</description>
        <formula>IF( Balance__c &lt;=0,0,
TODAY() - DATE(YEAR(TxnDate__c),MONTH(TxnDate__c),DAY(TxnDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Detail__c</fullName>
        <description>Invoice Detail</description>
        <label>Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Doc Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <description>Total Payments</description>
        <label>Payments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceBook_Name__c</fullName>
        <label>PriceBook Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_To_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <description>Total Invoice Amount</description>
        <label>Total Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TxnDate__c</fullName>
        <description>Due Date of the invoice</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesOrder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Receivable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Payments__c</columns>
        <columns>Balance__c</columns>
        <columns>Days_Outstanding__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Modified_today</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Balance__c</columns>
        <columns>Sync_Date__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Payments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Modified today</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Receivables</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>